--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
 		"고구마라떼 (Ice)",
 		"핫초코 (Hot)",
 		"아이스초코 (Ice)",
+		"화이트초코라떼 (Hot)",
+		"화이트초코라떼 (Ice)",
 		"오곡라떼 (Hot)",
 		"오곡라떼 (Ice)",
 		"화이트초코 (Hot)",
