[FEATURE] Added two types of deutsche coffee [DESC.]

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     // initialize data
     var itemlist = [ // start hyphen(-) it used as a category.
         "-COFFEE",
+        "도이치커피 (Hot)",
+        "도이치커피 (Ice)",
         "아메리카노 (Hot)",
         "아메리카노 (Ice)",
         "카페라테 (Hot)",
