[BUGFIX|FEATURE|TASK] [DESC.]

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     // initialize data
     var itemlist = [ // start hyphen(-) it used as a category.
         "-COFFEE",
-        "도이치커피 (Hot)",
+        "도이치커피 맛난거 (Hot)",
         "도이치커피 (Ice)",
         "아메리카노 (Hot)",
         "아메리카노 (Ice)",
