[BUGFIX|FEATURE|TASK] [DESC.]

--- a/index.html
+++ b/index.html
@@ -14,10 +14,9 @@
     <script>
 
     // initialize data
+    
     var itemlist = [ // start hyphen(-) it used as a category.
         "-COFFEE",
-        "도이치커피 맛난거 (Hot)",
-        "도이치커피 (Ice)",
         "아메리카노 (Hot)",
         "아메리카노 (Ice)",
         "카페라테 (Hot)",
@@ -47,10 +46,14 @@
         "우유 (Hot)",
         "우유 (Ice)",
         "-TEA",
-        "얼그레이",
-        "페퍼민트",
-        "패션후르츠",
-        "유자차",
+        "얼그레이 (Hot)",
+        "얼그레이 (Ice)",
+        "페퍼민트 (Hot)",
+        "페퍼민트 (Ice)",
+        "패션후르츠 (Hot)",
+        "패션후르츠 (Ice)",
+        "유자차 (Hot)",
+        "유자차 (Hot)",
         "-SMOOTHIE",
         "딸기스무디",
         "블루베리스무디",
