--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
         "패션후르츠 (Hot)",
         "패션후르츠 (Ice)",
         "유자차 (Hot)",
-        "유자차 (Hot)",
+        "유자차 (Ice)",
+        "대추차 (Hot)",
+        "대추차 (Ice)",
         "-SMOOTHIE",
         "딸기스무디",
         "블루베리스무디",
